add day002 post

--- a/_posts/2020-07-05-day002.md
+++ b/_posts/2020-07-05-day002.md
@@ -1,14 +1,10 @@
 ---
-title: 'Day001 props & state'
-date: 2019-07-04
-categories: React props state TIL day001
+title: 'Day 002-react router(SPA)'
+date: 2019-07-05
+categories: React router SPA TIL day002
 ---
 
-# Day 001
-
-First of all, I studied props and state using [CRA](https://github.com/facebook/create-react-app) (Create React App).
-
-I plan to make React project from scratch, but at first I thought it would be effective to using CRA.
+# Day 002
 
 ### props & state
 
@@ -18,7 +14,7 @@ So, I tried to make examples of props and state at Day 001.
 
 This is my output.
 
-![](file://assets/day001.gif)
+![](/assets/day001.gif)
 
 It looks not beautiful but I think it's good to understand basic of props and state.
 
