edit day001 post

--- a/_posts/2019-07-04-day001.md
+++ b/_posts/2019-07-04-day001.md
@@ -18,8 +18,21 @@ So, I tried to make examples of props and state at Day 001.
 
 This is my output.
 
-![](file:///assets/day001.gif)
+![](/assets/day001.gif)
 
 It looks not beautiful but I think it's good to understand basic of props and state.
+
+```javascript
+<div className="props-wrap">
+  <h2>Using Props</h2>
+  <MyComponent value="3000" />
+</div>
+```
+
+I worte props value to 3000.
+
+Props is static data that parent component give to chile. It's immutable.
+
+State data can change. And when state change we need to use setState().
 
 [Day001 github link](https://github.com/oneybee/100days-of-react/tree/master/day001-props-state-basic)
