add day002 desc

--- a/_posts/2020-07-05-day002.md
+++ b/_posts/2020-07-05-day002.md
@@ -6,16 +6,22 @@ categories: React router SPA TIL day002
 
 # Day 002
 
-### props & state
+React use virtul DOM. I understood virtul DOM doesn't reload view when some view changes.
 
-Many articles said props, state are important part of React.
+So, It's reduce time, can make SPA(Single Page App) and user also feel fast than before.
 
-So, I tried to make examples of props and state at Day 001.
+### React router
 
-This is my output.
+This is the ouput of today.
 
-![](/assets/day001.gif)
+I make basic SPA with React router and little css.
 
-It looks not beautiful but I think it's good to understand basic of props and state.
+![](/assets/day002.gif)
 
-[Day001 github link](https://github.com/oneybee/100days-of-react/tree/master/day001-props-state-basic)
+```
+npm install --save react-router-dom
+```
+
+Before using router, we need to install React router.
+
+[Day002 github link](https://github.com/oneybee/100days-of-react/tree/master/day002-react-router)
