edit first post & day002 post

--- a/_posts/2020-07-05-day002.md
+++ b/_posts/2020-07-05-day002.md
@@ -10,6 +10,10 @@ React use virtul DOM. I understood virtul DOM doesn't reload view when some view
 
 So, It's reduce time, can make SPA(Single Page App) and user also feel fast than before.
 
+I've received a lot of help with below post.
+
+[simple react router tutorial](https://blog.pshrmn.com/simple-react-router-v4-tutorial/)
+
 ### React router
 
 This is the ouput of today.
@@ -18,10 +22,10 @@ I make basic SPA with React router and little css.
 
 ![](/assets/day002.gif)
 
+Before using router, we need to install React router.
+
 ```
 npm install --save react-router-dom
 ```
-
-Before using router, we need to install React router.
 
 [Day002 github link](https://github.com/oneybee/100days-of-react/tree/master/day002-react-router)
