--- a/_posts/2019-07-03-100days-of-React.md
+++ b/_posts/2019-07-03-100days-of-React.md
@@ -1,6 +1,6 @@
 ---
-title: "100 days of React"
-date: 2019-07-03 
+title: '100 days of React'
+date: 2019-07-03
 categories: React 100days TIL
 ---
 
@@ -8,8 +8,12 @@ Hello, This is first post of the series 100 days of React.
 
 The reason for doing this is to learn React. 😎
 
-Many developers said that the best way to learn the code is to make it yourself. 
+Many developers said that the best way to learn the code is to make it yourself.
 
-So over the next 100 days, I'm going to study React and create example or project files.
+So over the next 100 days, I'm going to study React and make example or project files.
+
+Maybe it's not great to the professional developer in the beginning, but I expect to better and better every day. 🙏
+
+Also, I'll make my blog with React later. (I'm using basic Jekyll theme now)
 
 Please let me know if my knowledge is wrong or if you have any resources or examples to recommend.
