--- a/_posts/2019-07-04-day001.md
+++ b/_posts/2019-07-04-day001.md
@@ -6,6 +6,8 @@ categories: React props state TIL day001
 
 # Day 001
 
+[👉 Day001 github link](https://github.com/oneybee/100days-of-react/tree/master/day001-props-state-basic)
+
 First of all, I studied props and state using [CRA](https://github.com/facebook/create-react-app) (Create React App).
 
 I plan to make React project from scratch, but at first I thought it would be effective to using CRA.
@@ -34,5 +36,3 @@ I worte props value to 3000.
 Props is static data that parent component give to chile. It's immutable.
 
 State data can change. And when state change we need to use setState().
-
-[Day001 github link](https://github.com/oneybee/100days-of-react/tree/master/day001-props-state-basic)
