--- a/_posts/2020-07-05-day002.md
+++ b/_posts/2020-07-05-day002.md
@@ -6,6 +6,8 @@ categories: React router SPA TIL day002
 
 # Day 002
 
+[👉 Day002 github link](https://github.com/oneybee/100days-of-react/tree/master/day002-react-router)
+
 React use virtul DOM. I understood virtul DOM doesn't reload view when some view changes.
 
 So, It's reduce time, can make SPA(Single Page App) and user also feel fast than before.
@@ -27,5 +29,3 @@ Before using router, we need to install React router.
 ```
 npm install --save react-router-dom
 ```
-
-[Day002 github link](https://github.com/oneybee/100days-of-react/tree/master/day002-react-router)
