change arrow emoji

--- a/_posts/2019-07-04-day001.md
+++ b/_posts/2019-07-04-day001.md
@@ -6,7 +6,7 @@ categories: React props state TIL day001
 
 # Day 001
 
-[👉 Day001 github link](https://github.com/oneybee/100days-of-react/tree/master/day001-props-state-basic)
+👉 [Day001 github link](https://github.com/oneybee/100days-of-react/tree/master/day001-props-state-basic)
 
 First of all, I studied props and state using [CRA](https://github.com/facebook/create-react-app) (Create React App).
 
