--- a/_posts/2020-07-05-day002.md
+++ b/_posts/2020-07-05-day002.md
@@ -6,7 +6,7 @@ categories: React router SPA TIL day002
 
 # Day 002
 
-[👉 Day002 github link](https://github.com/oneybee/100days-of-react/tree/master/day002-react-router)
+👉 [Day002 github link](https://github.com/oneybee/100days-of-react/tree/master/day002-react-router)
 
 React use virtul DOM. I understood virtul DOM doesn't reload view when some view changes.
 
