edit day002 desc

--- a/_posts/2020-07-05-day002.md
+++ b/_posts/2020-07-05-day002.md
@@ -8,7 +8,9 @@ categories: React router SPA TIL day002
 
 👉 [Day002 github link](https://github.com/oneybee/100days-of-react/tree/master/day002-react-router)
 
-React use virtul DOM. I understood virtul DOM doesn't reload view when some view changes.
+React use virtul DOM. I understood virtul DOM doesn't reload all view when some view changes.
+
+Just reload part of view.
 
 So, It's reduce time, can make SPA(Single Page App) and user also feel fast than before.
 
@@ -18,14 +20,47 @@ I've received a lot of help with below post.
 
 ### React router
 
+I want to make basic menu of web site using React router.
+
 This is the ouput of today.
 
-I make basic SPA with React router and little css.
-
 ![](/assets/day002.gif)
+
+I make basic SPA with React router and little css.
 
 Before using router, we need to install React router.
 
 ```
 npm install --save react-router-dom
 ```
+
+### How to use?
+
+```javascript
+<Router>
+  <div className="routerWrap">
+    <div className="linkWrap">
+      <Link to="/" className="linkStyle">
+        Home
+      </Link>
+      <Link to="/MyWork" className="linkStyle">
+        MyWork page
+      </Link>
+      <Link to="/MyList" className="linkStyle">
+        MyList
+      </Link>
+    </div>
+  </div>
+  <div>This is simple SPA(single page app)</div>
+
+  <br />
+  <br />
+
+  <Route path="/MyWork" component={MyWork} />
+  <Route path="/MyList" component={MyList} />
+</Router>
+```
+
+First, I need to wrap <Router> to all.
+
+Then I'm using <Link> to load other page and <Route> load component that I made like {MyWork}.
