--- a/_posts/2020-07-05-day002.md
+++ b/_posts/2020-07-05-day002.md
@@ -34,6 +34,12 @@ Before using router, we need to install React router.
 npm install --save react-router-dom
 ```
 
+and import react router like this.
+
+```javascript
+import { BrowserRouter as Router, Route, Link } from 'react-router-dom'
+```
+
 ### How to use?
 
 ```javascript
@@ -60,6 +66,8 @@ npm install --save react-router-dom
   <Route path="/MyList" component={MyList} />
 </Router>
 ```
+
+This is part of my code.
 
 First, I need to wrap <Router> to all.
 
