--- a/_posts/2020-07-05-day002.md
+++ b/_posts/2020-07-05-day002.md
@@ -69,6 +69,6 @@ import { BrowserRouter as Router, Route, Link } from 'react-router-dom'
 
 This is part of my code.
 
-First, I need to wrap <Router> to all.
+First, I need to wrap 'Router' to all.
 
-Then I'm using <Link> to load other page and <Route> load component that I made like {MyWork}.
+Then I'm using 'Link' to load other page and 'Route' load component that I made like {MyWork}.
