add email subscription

--- a/_posts/2019-07-04-100days-of-React.md
+++ b/_posts/2019-07-04-100days-of-React.md
@@ -19,3 +19,5 @@ Also, I'll make my blog with React later. (I'm using basic Jekyll theme now)
 Please let me know if my knowledge is wrong or if you have any resources or examples to recommend.
 
 You can see all 100 days of React file [here](https://github.com/oneybee/100days-of-react)
+
+📮 [You can get email from here!](http://eepurl.com/gwNffb)
