--- a/_posts/2019-07-05-day001.md
+++ b/_posts/2019-07-05-day001.md
@@ -36,3 +36,5 @@ I worte props value to 3000.
 Props is static data that parent component give to chile. It's immutable.
 
 State data can change. And when state change we need to use setState().
+
+📮 [You can get email from here!](http://eepurl.com/gwNffb)
