--- a/_posts/2020-07-06-day002.md
+++ b/_posts/2020-07-06-day002.md
@@ -72,3 +72,5 @@ This is part of my code.
 First, I need to wrap 'Router' to all.
 
 Then I'm using 'Link' to load other page and 'Route' load component that I made like {MyWork}.
+
+📮 [You can get email from here!](http://eepurl.com/gwNffb)
