edit day003 doc

--- a/_posts/2021-07-07-day003.md
+++ b/_posts/2021-07-07-day003.md
@@ -1,66 +1,103 @@
 ---
-title: 'Day 003-Hooks'
+title: 'Day 003 - Hooks'
 date: 2019-07-07
 categories: React hooks TIL day003
 ---
 
-# Day 003
+# Hooks?
 
-👉 [Day002 github link](https://github.com/oneybee/100days-of-react/tree/master/day003-hooks)
+Today I studied about Hooks.
 
-### React router
+👉 [Day003 github link](https://github.com/oneybee/100days-of-react/tree/master/day003-hooks)
 
-I want to make basic menu of web site using React router.
+Hooks are a new addition in React 16.8. They let you use state and other React features without writing a class. (from official document)
 
-This is the ouput of today.
+It provides useState, useEffect which you can perform a variety of tasks that you couldn't perform in a function component.
 
-![](/assets/day003/3-1.gif)
+### useState
 
-I make basic SPA with React router and little css.
+useState is the first Hook that I learned today.
 
-Before using router, we need to install React router.
+![](/assets/day003/3-3.gif)
 
-```
-npm install --save react-router-dom
-```
+Above output is basic example using useState.
 
-and import react router like this.
+The code looks like below.
 
 ```javascript
-import { BrowserRouter as Router, Route, Link } from 'react-router-dom'
-```
+import React, { useState } from 'react'
 
-### How to use?
+function Index() {
+  const [fruit, setFruit] = useState('banana 🍌')
 
-```javascript
-<Router>
-  <div className="routerWrap">
-    <div className="linkWrap">
-      <Link to="/" className="linkStyle">
-        Home
-      </Link>
-      <Link to="/MyWork" className="linkStyle">
-        MyWork page
-      </Link>
-      <Link to="/MyList" className="linkStyle">
-        MyList
-      </Link>
+  return (
+    <div>
+      <p>I like {fruit}</p>
+      <button onClick={() => setFruit('peach!! 🍑')}>Change fruit</button>
     </div>
-  </div>
-  <div>This is simple SPA(single page app)</div>
-
-  <br />
-  <br />
-
-  <Route path="/MyWork" component={MyWork} />
-  <Route path="/MyList" component={MyList} />
-</Router>
+  )
+}
 ```
 
-This is part of my code.
+📮 [You can join newsletter here!](http://eepurl.com/gwNffb)
 
-First, I need to wrap 'Router' to all.
+### useEffect
 
-Then I'm using 'Link' to load other page and 'Route' load component that I made like {MyWork}.
+useEffect is a Hook that you can set to perform certain tasks whenever the React component is rendered.
 
-📮 [You can get email from here!](http://eepurl.com/gwNffb)
+```javascript
+import React, { useEffect } from 'react'
+
+function Index() {
+  const [count, setCount] = useState(0)
+  const [fruit, setFruit] = useState('banana 🍌')
+
+  useEffect(() => {
+    document.title = `You clicked ${count} times`
+    setTimeout(() => {
+      console.log(`You clicked ${count} times`)
+    }, 3000)
+  })
+
+  function handleAlertClick() {
+    setTimeout(() => {
+      alert('You clicked on: ' + count)
+    }, 3000)
+  }
+
+  return (
+    <div>
+      <button onClick={() => setCount(count + 1)}>Click me</button>
+
+      <button onClick={handleAlertClick}>Show alert</button>
+    </div>
+  )
+}
+```
+
+I use useEffect to render new title of website.
+
+![](/assets/day003/3-4.gif)
+
+As you see title change after I clicked button.
+
+### useState + useEffect
+
+After making basic examples, I want to make example using useState and useEffect together.
+
+I make time counter that increased the seconds by the number I inputed.
+
+For example, after I inputed 10 then numbers increase by 10 in a second.
+
+![](/assets/day003/3-2.gif)
+
+It took me more time than I thought to make a example that using useState and useEffect together.
+
+I still thought I should get used to it.
+
+So I'm going to make more examples using Hooks and it could be better if I make real examples.
+
+I recommend these articles below.
+
+[Official document](https://reactjs.org/docs/hooks-intro.html)
+[A Complete Guide to useEffect by Dan Abramov](https://overreacted.io/a-complete-guide-to-useeffect/)
