--- a/_posts/2021-07-07-day003.md
+++ b/_posts/2021-07-07-day003.md
@@ -14,7 +14,9 @@ Hooks are a new addition in React 16.8. They let you use state and other React f
 
 It provides useState, useEffect which you can perform a variety of tasks that you couldn't perform in a function component.
 
-### useState
+📮 [You can join newsletter here!](http://eepurl.com/gwNffb)
+
+## useState
 
 useState is the first Hook that I learned today.
 
@@ -39,9 +41,7 @@ function Index() {
 }
 ```
 
-📮 [You can join newsletter here!](http://eepurl.com/gwNffb)
-
-### useEffect
+## useEffect
 
 useEffect is a Hook that you can set to perform certain tasks whenever the React component is rendered.
 
@@ -81,7 +81,7 @@ I use useEffect to render new title of website.
 
 As you see title change after I clicked button.
 
-### useState + useEffect
+## useState + useEffect
 
 After making basic examples, I want to make example using useState and useEffect together.
 
