--- a/_posts/2021-07-07-day003.md
+++ b/_posts/2021-07-07-day003.md
@@ -91,13 +91,13 @@ For example, after I inputed 10 then numbers increase by 10 in a second.
 
 ![](/assets/day003/3-2.gif)
 
-It took me more time than I thought to make a example that using useState and useEffect together.
+It took more time than I expected to make a example that using useState and useEffect together.
 
 I still thought I should get used to it.
 
 So I'm going to make more examples using Hooks and it could be better if I make real examples.
 
-I recommend these articles below.
+And I recommend these articles below.
 
 [Official document](https://reactjs.org/docs/hooks-intro.html)
 
