--- a/_posts/2021-07-07-day003.md
+++ b/_posts/2021-07-07-day003.md
@@ -83,7 +83,7 @@ As you see title change after I clicked button.
 
 ## useState + useEffect
 
-After making basic examples, I want to make example using useState and useEffect together.
+After making basic examples, I want to use useState and useEffect together.
 
 I make time counter that increased the seconds by the number I inputed.
 
@@ -93,11 +93,7 @@ For example, after I inputed 10 then numbers increase by 10 in a second.
 
 It took more time than I expected to make a example that using useState and useEffect together.
 
-I still thought I should get used to it.
-
 So I'm going to make more examples using Hooks and it could be better if I make real examples.
-
-And I recommend these articles below.
 
 [Official document](https://reactjs.org/docs/hooks-intro.html)
 
