--- a/_posts/2021-07-07-day003.md
+++ b/_posts/2021-07-07-day003.md
@@ -46,7 +46,7 @@ function Index() {
 useEffect is a Hook that you can set to perform certain tasks whenever the React component is rendered.
 
 ```javascript
-import React, { useEffect } from 'react'
+import React, { useState, useEffect } from 'react'
 
 function Index() {
   const [count, setCount] = useState(0)
