--- a/_posts/2021-07-07-day003.md
+++ b/_posts/2021-07-07-day003.md
@@ -1,7 +1,7 @@
 ---
 title: 'Day 003 - Hooks'
 date: 2019-07-07
-categories: React hooks TIL day003
+categories: React Hooks TIL day003
 ---
 
 # Hooks?
