--- a/_posts/2022-07-08-day004.md
+++ b/_posts/2022-07-08-day004.md
@@ -60,6 +60,6 @@ I thought after adding onChange event, memo will adding to list.
 
 But, as you see it doesn't work.
 
-I need to submitting memo data to Index component.
+I think I need to submitting memo data to Index component.
 
-So, I'm gonna add that tomorrow.
+So, I'm gonna make more tomorrow.
