--- a/_posts/2023-07-09-day005.md
+++ b/_posts/2023-07-09-day005.md
@@ -1,28 +1,28 @@
 ---
-title: 'Day 004 - CRUD with React Hooks 1'
-date: 2019-07-08
-categories: React Hooks day004 CRUD
+title: 'Day 005 - CRUD with React Hooks 2'
+date: 2019-07-09
+categories: React Hooks day005 CRUD
 ---
 
-# Hooks
+# CRUD
 
-Yesterday, I studied about Hooks. But, I need to make by myself more.
+Today, I make basic CRUD app with React Hooks.
 
-I want to make CRUD(Create, Read, Update, Delete) with React Hooks.
+It's not easy to make.
+
+First, I make Creat, Read part
 
 📮 [You can join newsletter here!](http://eepurl.com/gwNffb)
 
 ## Adding memo
 
-First of all, I try to make Adding memo function.
-
 I made simple input and memo table like this.
 
 ![](/assets/day004/day004.png)
 
-It was not hard to make table and input, but it's little bit hard to make adding memo function.
+This is basic table of CRUD memo app.
 
-To conclude, I failed to make adding memo function today.
+And I make Add Memo Form like this.
 
 ```javascript
 import React, { useState } from 'react'
@@ -38,7 +38,15 @@ const AddMemoForm = props => {
   }
 
   return (
-    <form>
+    <form
+      onSubmit={event => {
+        event.preventDefault()
+        if (!addMemo.category || !addMemo.content) return
+
+        props.addMemo(addMemo)
+        setAddMemo(initialFormState)
+      }}
+    >
       <label>category</label>
       <input type="text" name="category" value={addMemo.category} onChange={InputChange} />
       <label>content</label>
@@ -52,14 +60,12 @@ export default AddMemoForm
 ```
 
 You can see all code here!
-👉 [Day004 github link](https://github.com/oneybee/100days-of-react/tree/master/day04-05-CRUD-with-Hooks)
+👉 [Day005 github link](https://github.com/oneybee/100days-of-react/tree/master/day04-05-CRUD-with-Hooks)
 
-I thought after adding onChange event, memo will adding to list.
+And this is result of today.
 
-![](/assets/day004/day004.gif)
+![](/assets/day05.gif)
 
-But, as you see it doesn't work.
+It looks simple, but it took quite a while.
 
-I think I need to submitting memo data to Index component.
-
-So, I'm gonna make more tomorrow.
+And I'll make Edit, Delete function later.
