edit day06 post

--- a/_posts/2024-07-10-day006.md
+++ b/_posts/2024-07-10-day006.md
@@ -14,8 +14,6 @@ Today, I make delete function on CRUD app.
 
 It's easier than adding memo function.
 
-👉 [Day006 github link](https://github.com/oneybee/100days-of-react/tree/master/day04-06-CRUD-with-Hooks)
-
 And I make codes to my index.js file.
 
 ```javascript
@@ -24,14 +22,18 @@ const deleteMemo = id => {
 }
 ```
 
+And add onClick event to my delete button.
+
 ```javascript
 <button onClick={() => props.deleteMemo(memo.id)}>Delete</button>
 ```
 
-And add onClick event to my delete button.
+You can check all my codes here 👉 [Day006 github link](https://github.com/oneybee/100days-of-react/tree/master/day04-06-CRUD-with-Hooks)
 
 ## Edit memo
 
-After making delete function, I try to make edit memo function.
+![I want to make edit function like this example gif](/assets/day06-e.gif)
 
-I wrote many wrong codes and I didn't finish edit function today.
+I try to make edit memo function, but I make many wrong codes. 😨
+
+But I think I can finish it tomorrow.
