edit desc of day06

--- a/_posts/2024-07-10-day006.md
+++ b/_posts/2024-07-10-day006.md
@@ -32,8 +32,12 @@ You can check all my codes here 👉 [Day006 github link](https://github.com/one
 
 ## Edit memo
 
-![I want to make edit function like this example gif](/assets/day06-e.gif)
+After making delete function,
+
+I want to make edit function like this example gif.
+
+![](/assets/day06-e.gif)
 
 I try to make edit memo function, but I make many wrong codes. 😨
 
-But I think I can finish it tomorrow.
+I think I can finish it tomorrow.
