--- a/_posts/2022-07-08-day004.md
+++ b/_posts/2022-07-08-day004.md
@@ -52,7 +52,7 @@ export default AddMemoForm
 ```
 
 You can see all code here!
-👉 [Day004 github link](https://github.com/oneybee/100days-of-react/tree/master/day04-06-CRUD-with-Hooks)
+👉 [Day004 github link](https://github.com/oneybee/100days-of-react/tree/master/day04-07-CRUD-with-Hooks
 
 I thought after adding onChange event, memo will adding to list.
 
