--- a/_posts/2024-07-10-day006.md
+++ b/_posts/2024-07-10-day006.md
@@ -1,5 +1,5 @@
 ---
-title: 'Day 006 - Delete function with React Hooks 2'
+title: 'Day 006 - Delete function with React Hooks'
 date: 2019-07-10
 categories: React Hooks day006 CRUD Delete
 ---
@@ -28,7 +28,7 @@ And add onClick event to my delete button.
 <button onClick={() => props.deleteMemo(memo.id)}>Delete</button>
 ```
 
-You can check all my codes here 👉 [Day006 github link](https://github.com/oneybee/100days-of-react/tree/master/day04-06-CRUD-with-Hooks)
+You can check all my codes here 👉 [Day006 github link](https://github.com/oneybee/100days-of-react/tree/master/day04-07-CRUD-with-Hooks)
 
 ## Edit memo
 
