--- a/_posts/2025-07-11-day007.md
+++ b/_posts/2025-07-11-day007.md
@@ -58,3 +58,5 @@ This is my final result of masic memo app using React Hooks.
 It was quite hard one, but it helpful for me.
 
 I can try other project and study about React or React Hooks.
+
+You can try my simple memo app [here](https://simple-memo-app.netlify.com/)
